All PAges structure done

--- a/components/Footer/Footer.module.scss
+++ b/components/Footer/Footer.module.scss
@@ -26,6 +26,7 @@
           padding: 0 0 15px 0;
           color: white;
           font-weight: 600;
+cursor:pointer;
           span {
             cursor: pointer;
             transition: all 200ms ease-out;
