--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -18,7 +18,7 @@ body {
   width: 100vw;
   max-width: 100vw;
   overflow-x: hidden;
-
+  scroll-behavior: smooth;
 }
 
 * {
@@ -110,10 +110,55 @@ body {
   margin: auto !important;
 }
 
-div#__next {
-  position: absolute;
-  left: 0;
-  top: 75px;
+// div#__next {
+//   position: absolute;
+//   left: 0;
+//   top: 75px;
+// }
+
+#contact {
+  width: 100vw;
+  height: 100vh;
+  background-color: greenyellow;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-wrap: wrap;
+}
+#wishlist {
+  height: 100vh;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-wrap: wrap;
+  width: 100vw;
+  background-color: aqua;
+}#gallery {
+  height: 100vh;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-wrap: wrap;
+  width: 100vw;
+  background-color: aqua;
+}
+#home {
+  height: 100vh;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-wrap: wrap;
+  width: 100vw;
+  background-color: aqua;
 }
 
 
+#about {
+  height: 100vh;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-wrap: wrap;
+  width: 100vw;
+  background-color: red;
+}
